# mt_metadata

./: .bumpversion.cfg  .gitignore  .pdm-python  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  Release_Guide.rst  TEST_SUITE_SUMMARY.md  TF_OPTIMIZATION_RESULTS.md  check_fields.py  cliff.toml  code.json  debug_birrp_block_conversion.py  debug_channel_positions.py  debug_detailed_roundtrip.py  debug_header.py  debug_location.py  debug_setter_trace.py  debug_tf_channels.py  debug_tf_deep.py  diagnostic_phases.py  field_converter.py  find_deprecated_fields.py  header_conversion_guide.py  migrate_common.py  migrate_pydantic_fields.py  migrate_simple.py  mt_field_converter.py  pydantic_final_solution.py  pydantic_property_guide.py  (+24 more)
.github/workflows/: README.md  bump-version.yml  format.yaml  publish.yml  testing_in_conda.yml
data/: MTML_Electrode_Unit.xml  MTML_Magnetometer_Unit.xml  StationXML_REW09.xml  __init__.py  fdsn-station_2021-02-12T23_28_49.xml  fdsn-station_2021-02-19T22_47_21.xml
data/mt_xml/: single_station_mt_experiment.xml  test.h5
data/stationxml/: fdsn_no_mt_info.xml  mtml_magnetometer_example.xml  mtml_single_station.xml  station_xml_with_fap_example.xml  station_xml_with_fir_example.xml
data/xml/: mtml_electrode_example.xml
docs/: Makefile  conf.py  create_metadata_tables.py  environment.yml  generate_pydantic_rst.py  index.rst  installation.rst  make.bat  mt_metadata_guide.tex  readme.rst  sphinx_build_output.txt  usage.rst
docs/_ext/: autodoc_pydantic_annotated.py  format_annotated.py
docs/_templates/: layout.html
docs/source/: base_index.rst  base_metadata_base.rst  common_author_person.rst  common_band.rst  common_basic_location.rst  common_basic_location_no_datum.rst  common_citation.rst  common_comment.rst  common_copyright.rst  common_data_quality.rst  common_declination.rst  common_fdsn.rst  common_funding_source.rst  common_geographic_location.rst  common_index.rst  common_instrument.rst  common_location.rst  common_min_max_range.rst  common_orientation.rst  common_person.rst  common_provenance.rst  common_rating.rst  common_software.rst  common_start_end_range.rst  common_station_location.rst  common_time_period.rst  common_time_period_date.rst  conventions.rst  emtfxml_copyright.rst  emtfxml_data_type.rst  emtfxml_data_types.rst  emtfxml_e_m_t_f.rst  emtfxml_external_url.rst  emtfxml_field_notes.rst  emtfxml_primary_data.rst  emtfxml_processing_info.rst  emtfxml_site_layout.rst  emtfxml_statistical_estimates.rst  features_feature.rst  features_feature_decimation_channel.rst  (+242 more)
examples/: build_experiment.py  make_stationxml_from_mt.py  make_stationxml_from_mtml.py  mth5_from_stationxml.py  read_stationxml.py  sandbox.py
examples/notebooks/: convert_old_to_json_schema.ipynb  eminar_example.ipynb  example_01.ipynb  example_02.ipynb  experiment_example.ipynb  person_schema.json  person_test.py  pydantic_examples.ipynb
logs/: metadata_schema.log.1  metadata_schema.log.2  mt_metadata_debug.log.1  mt_metadata_debug.log.2  mt_time.log.1  mt_time.log.2
mt_metadata/: __init__.py  base.py  filter_base_basemodel.py  helper_functions.py  helpers.py  schema_base.py
mt_metadata/base/: __init__.py  helpers.py  metadata.py  notes.py  pydantic_helpers.py  schema.py
mt_metadata/common/: __init__.py  band.py  citation.py  comment.py  comment_basemodel.py  copyright.py  data_quality.py  data_quality.py.backup  declination.py  declination.py.backup  enumerations.py  fdsn.py  fdsn.py.backup  funding_source.py  funding_source_basemodel.py  geographic_location.py  instrument.py  instrument.py.backup  instrument_basemodel.py  list_dict.py  location.py  location.py.backup  mttime.py  orientation.py  person.py  person_basemodel.py  provenance.py  provenance.py.backup  provenance_basemodel.py  range.py  rating.py  rating_basemodel.py  software.py  software.py.backup  software_basemodel.py  time_period.py  time_period_basemodel.py  units.py
mt_metadata/data/: __init__.py
mt_metadata/features/: __init__.py  base_feature.py  base_feature_basemodel.py  coherence.py  coherence.py.backup  coherence_basemodel.py  cross_powers.py  fc_coherence.py  fc_coherence_basemodel.py  feature.py  feature.py.backup  feature_decimation_channel.py  feature_decimation_channel_basemodel.py  feature_fc.py  feature_fc_run.py  feature_fc_run_basemodel.py  feature_ts.py  feature_ts_run.py  feature_ts_run_basemodel.py  feature_weighting_window.py  feature_weighting_window_basemodel.py  registry.py  striding_window_coherence.py  striding_window_coherence_basemodel.py  weight_kernel_basemodel.py
mt_metadata/processing/: __init__.py  short_time_fourier_transform.py  short_time_fourier_transform.py.backup  short_time_fourier_transform_basemodel.py  time_series_decimation.py  time_series_decimation_basemodel.py  window.py  window.py.backup  window_basemodel.py
mt_metadata/timeseries/: __init__.py  auxiliary.py  auxiliary.py.backup  auxiliary_basemodel.py  battery.py  battery_basemodel.py  channel.py  channel.py.backup  channel_basemodel.py  citation.py  citation_basemodel.py  comment.py  comment_basemodel.py  copyright.py  copyright_basemodel.py  data_logger.py  data_quality.py  declination.py  declination_basemodel.py  diagnostic.py  electric.py  electric_basemodel.py  electrode.py  experiment.py  fdsn.py  fdsn_basemodel.py  filter.py  filtered.py  filtered_basemodel.py  funding_source.py  funding_source_basemodel.py  geographic_location.py  geographic_location_basemodel.py  instrument.py  instrument_basemodel.py  location.py  location_basemodel.py  magnetic.py  magnetic.py.backup  magnetic_basemodel.py  (+23 more)
mt_metadata/transfer_functions/: __init__.py  channel_nomenclature.py  core.py
tests/: __init__.py  example_create_model.py  test_list_dict.py  test_metadata.py  test_mttime.py  test_mttime_pytest.py  test_schema.py  test_standards_exist.py  test_summarize.py  test_summarize_simple.py  test_units.py  test_utils.py  test_validators.py
(+1462 files in other folders)
