[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mt_metadata"
version = "0.4.0"
description = "Metadata for magnetotelluric data"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT license"}
authors = [
    {name = "Jared Peacock", email = "jpeacock@usgs.gov"},
    {name = "Karl Kappler", email = "kkappler@berkeley.edu"}
]
keywords = ["mt_metadata"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "xarray",
    "loguru",
    "pydantic >= 2.0.0",
]

[project.optional-dependencies]
obspy = ["obspy"]
test = ["pytest>=3"]

[project.urls]
Homepage = "https://github.com/kujaku11/mt_metadata"
Repository = "https://github.com/kujaku11/mt_metadata"
Documentation = "https://mt-metadata.readthedocs.io/"

[tool.setuptools.packages.find]
include = ["mt_metadata", "mt_metadata.*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = [
    "data/mt_xml/*.xml",
    "data/stationxml/*.xml",
    "data/stationxml/readme", 
    "data/transfer_functions/*.edi",
    "data/transfer_functions/*.xml",
    "data/transfer_functions/*.avg",
    "data/transfer_functions/*.j",
    "data/transfer_functions/*.zmm",
    "data/transfer_functions/*.zss",
    "data/transfer_functions/*.txt",
    "data/licenses.json",
]

[tool.pytest.ini_options]
collect_ignore = ["setup.py"]
testpaths = ["tests"]
